runs/jitfailure-ffc_form_27baa00609f92ee1a42eae742e0e1b74c3b0d838/error.log
/tmp/tmp1ROgnF/ffc_form_27baa00609f92ee1a42eae742e0e1b74c3b0d838.cpp: In member function ‘virtual void ffc_form_27baa00609f92ee1a42eae742e0e1b74c3b0d838_cell_integral_main_otherwise::tabulate_tensor(double*, const double* const*, const double*, int) const’:
/tmp/tmp1ROgnF/ffc_form_27baa00609f92ee1a42eae742e0e1b74c3b0d838.cpp:95:18: error: redeclaration of ‘const double J_c0’
     const double J_c0 = coordinate_dofs[0] * FE7_C0_D10_Q1[0][0][0] + coordinate_dofs[2] * FE7_C0_D10_Q1[0][0][1];
                  ^
/tmp/tmp1ROgnF/ffc_form_27baa00609f92ee1a42eae742e0e1b74c3b0d838.cpp:89:18: note: ‘const double J_c0’ previously declared here
     const double J_c0 = coordinate_dofs[0] * FE7_C0_D10_Q1[0][0][0] + coordinate_dofs[2] * FE7_C0_D10_Q1[0][0][1];
                  ^
/tmp/tmp1ROgnF/ffc_form_27baa00609f92ee1a42eae742e0e1b74c3b0d838.cpp:96:18: error: redeclaration of ‘const double J_c3’
     const double J_c3 = coordinate_dofs[1] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[3] * FE7_C0_D01_Q1[0][0][1] + coordinate_dofs[5] * FE7_C0_D01_Q1[0][0][2];
                  ^
/tmp/tmp1ROgnF/ffc_form_27baa00609f92ee1a42eae742e0e1b74c3b0d838.cpp:90:18: note: ‘const double J_c3’ previously declared here
     const double J_c3 = coordinate_dofs[1] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[3] * FE7_C0_D01_Q1[0][0][1] + coordinate_dofs[5] * FE7_C0_D01_Q1[0][0][2];
                  ^
/tmp/tmp1ROgnF/ffc_form_27baa00609f92ee1a42eae742e0e1b74c3b0d838.cpp:97:18: error: redeclaration of ‘const double J_c1’
     const double J_c1 = coordinate_dofs[0] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[2] * FE7_C0_D01_Q1[0][0][1] + coordinate_dofs[4] * FE7_C0_D01_Q1[0][0][2];
                  ^
/tmp/tmp1ROgnF/ffc_form_27baa00609f92ee1a42eae742e0e1b74c3b0d838.cpp:91:18: note: ‘const double J_c1’ previously declared here
     const double J_c1 = coordinate_dofs[0] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[2] * FE7_C0_D01_Q1[0][0][1] + coordinate_dofs[4] * FE7_C0_D01_Q1[0][0][2];
                  ^
/tmp/tmp1ROgnF/ffc_form_27baa00609f92ee1a42eae742e0e1b74c3b0d838.cpp:98:18: error: redeclaration of ‘const double J_c2’
     const double J_c2 = coordinate_dofs[1] * FE7_C0_D10_Q1[0][0][0] + coordinate_dofs[3] * FE7_C0_D10_Q1[0][0][1];
                  ^
/tmp/tmp1ROgnF/ffc_form_27baa00609f92ee1a42eae742e0e1b74c3b0d838.cpp:88:18: note: ‘const double J_c2’ previously declared here
     const double J_c2 = coordinate_dofs[1] * FE7_C0_D10_Q1[0][0][0] + coordinate_dofs[3] * FE7_C0_D10_Q1[0][0][1];
                  ^
